[gd_scene load_steps=4 format=3 uid="uid://d4fwbo6ottgjn"]

[ext_resource type="Script" path="res://Scripts/TenBar.gd" id="1_4yc8k"]
[ext_resource type="Texture2D" uid="uid://b8eyowuh3weer" path="res://Textures/OffCheckClipped.png" id="2_a8iy0"]
[ext_resource type="Texture2D" uid="uid://do2hwugd2fw20" path="res://Textures/OnCheckClipped.png" id="3_wkmv0"]

[node name="TenBar" type="HBoxContainer" node_paths=PackedStringArray("buttons")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_4yc8k")
offImage = ExtResource("2_a8iy0")
onImage = ExtResource("3_wkmv0")
buttons = [NodePath("Button1"), NodePath("Button2"), NodePath("Button3"), NodePath("Button4"), NodePath("Button5"), NodePath("Button6"), NodePath("Button7"), NodePath("Button8"), NodePath("Button9"), NodePath("Button10")]
startingLevel = 0

[node name="Button1" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button2" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button3" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button4" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button5" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button6" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button7" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button8" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button9" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[node name="Button10" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_a8iy0")
flat = true

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_button_10_pressed"]
